hard-gists/ffd436e0a7897c9e872d/run.log
=== Docker Run Log for ffd436e0a7897c9e872d ===
Started at: Mi 29. Okt 21:45:16 CET 2025

[2025-10-29 21:45:17] START: Running container for ffd436e0a7897c9e872d
[2025-10-29 21:45:17] SUCCESS: Container 8d26768c28da642315c05c42ad2b77e6df6a9605d1a593925e2eb96714ea59aa started for ffd436e0a7897c9e872d
=== Container logs for ffd436e0a7897c9e872d ===
  File "/snippet.py", line 17
    print "Authenticated. Ready to receive messages"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ffd436e0a7897c9e872d ===
[2025-10-29 21:45:19] INFO: Container 8d26768c28da642315c05c42ad2b77e6df6a9605d1a593925e2eb96714ea59aa has stopped
